--- a/6405_ФилипповАС.ipynb
+++ b/6405_ФилипповАС.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bibikkkka/Big-Data/blob/LR0/6405_%D0%A4%D0%B8%D0%BB%D0%B8%D0%BF%D0%BF%D0%BE%D0%B2%D0%90%D0%A1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bibikkkka/Big-Data_6405_FilippovAS/blob/LR0/6405_%D0%A4%D0%B8%D0%BB%D0%B8%D0%BF%D0%BF%D0%BE%D0%B2%D0%90%D0%A1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2380,6 +2380,15 @@
           "execution_count": 138
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Если RECORDREADER будет генерировать случайные подмножества элементов матрицы, это может привести к проблемам, так как ключи, созданные в MAP, могут не соответствовать правильным позициям элементов."
+      ],
+      "metadata": {
+        "id": "hQisnGkQw5Zx"
+      }
     }
   ]
 }
